--- a/Keep Fit/Base.lproj/Main.storyboard
+++ b/Keep Fit/Base.lproj/Main.storyboard
@@ -60,15 +60,15 @@
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="AddGoalViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" delaysContentTouches="NO" bouncesZoom="NO" keyboardDismissMode="interactive" id="3H3-bx-hyK">
-                                <rect key="frame" x="-40" y="0.0" width="400" height="600"/>
+                                <rect key="frame" x="-40" y="0.0" width="400" height="568"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Completion Data &amp; Time" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="6ji-Q5-Xuc">
-                                        <rect key="frame" x="56" y="366" width="288" height="21"/>
+                                        <rect key="frame" x="56" y="306" width="288" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -87,6 +87,7 @@
                                         <segments>
                                             <segment title="Steps"/>
                                             <segment title="Stairs"/>
+                                            <segment title="Both"/>
                                         </segments>
                                         <connections>
                                             <action selector="typeSelecterAction:" destination="vXZ-lx-hvc" eventType="valueChanged" id="iS3-az-bCx"/>
@@ -106,18 +107,33 @@
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <pickerView contentMode="scaleToFill" id="zPN-5a-j54">
-                                        <rect key="frame" x="20" y="196" width="360" height="162"/>
-                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                    </pickerView>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="New Goal Title" minimumFontSize="17" id="7uo-CW-ec7">
                                         <rect key="frame" x="56" y="49" width="288" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="done"/>
                                     </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Number of Stairs" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="19t-9L-flc">
+                                        <rect key="frame" x="56" y="234" width="288" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Number of Steps" minimumFontSize="17" id="XWM-rb-b96">
+                                        <rect key="frame" x="56" y="196" width="288" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Number of Stairs" minimumFontSize="17" id="Lyg-qt-q0h">
+                                        <rect key="frame" x="56" y="263" width="288" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                    </textField>
                                     <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" id="ass-J5-8sf">
-                                        <rect key="frame" x="40" y="395" width="320" height="162"/>
+                                        <rect key="frame" x="40" y="335" width="320" height="162"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <date key="date" timeIntervalSinceReferenceDate="445528184.50142998">
                                             <!--2015-02-13 13:49:44 +0000-->
@@ -144,11 +160,11 @@
                         </barButtonItem>
                     </navigationItem>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="320" height="600"/>
+                    <size key="freeformSize" width="320" height="568"/>
                     <connections>
-                        <outlet property="amountLabel" destination="c0J-Po-GPr" id="D0P-JK-NKX"/>
-                        <outlet property="amountPicker" destination="zPN-5a-j54" id="yVg-ef-Hp9"/>
                         <outlet property="datePicker" destination="ass-J5-8sf" id="cdC-oK-YkU"/>
+                        <outlet property="numStairsField" destination="Lyg-qt-q0h" id="jaa-NE-YJd"/>
+                        <outlet property="numStepsField" destination="XWM-rb-b96" id="yMb-Wd-33m"/>
                         <outlet property="saveButton" destination="bwb-fe-Z5L" id="3YV-fB-xs4"/>
                         <outlet property="scrollView" destination="3H3-bx-hyK" id="UsI-wH-7J9"/>
                         <outlet property="textField" destination="7uo-CW-ec7" id="3JI-i3-SAz"/>
