--- a/Keep Fit/Base.lproj/Main.storyboard
+++ b/Keep Fit/Base.lproj/Main.storyboard
@@ -121,18 +121,6 @@
                                             <action selector="typeSelecterAction:" destination="vXZ-lx-hvc" eventType="valueChanged" id="p4m-ce-qQC"/>
                                         </connections>
                                     </segmentedControl>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Number of Steps" minimumFontSize="17" id="hWb-hj-RQx">
-                                        <rect key="frame" x="16" y="197" width="296" height="30"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
-                                    </textField>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Number of Stairs" minimumFontSize="17" id="wph-9j-xTV">
-                                        <rect key="frame" x="16" y="264" width="296" height="30"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
-                                    </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="New Goal Title" minimumFontSize="17" id="alI-u3-sVO">
                                         <rect key="frame" x="16" y="49" width="296" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -153,6 +141,34 @@
                                             <!--2015-02-21 20:37:18 +0000-->
                                         </date>
                                     </datePicker>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="4tX-ON-Tqp">
+                                        <rect key="frame" x="16" y="197" width="186" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="10000" stepValue="10" id="aw0-xZ-8yN">
+                                        <rect key="frame" x="218" y="193" width="94" height="29"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <connections>
+                                            <action selector="stepsStepperAction:" destination="vXZ-lx-hvc" eventType="valueChanged" id="Rgt-j9-6cz"/>
+                                        </connections>
+                                    </stepper>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="BBO-ah-Yl6">
+                                        <rect key="frame" x="16" y="264" width="186" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="10000" stepValue="10" id="Ycv-aM-N5k">
+                                        <rect key="frame" x="218" y="260" width="94" height="29"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <connections>
+                                            <action selector="stairsStepperAction:" destination="vXZ-lx-hvc" eventType="valueChanged" id="3hC-Dj-MxV"/>
+                                        </connections>
+                                    </stepper>
                                 </subviews>
                             </scrollView>
                         </subviews>
@@ -175,10 +191,12 @@
                     <connections>
                         <outlet property="datePicker" destination="lwb-db-ebE" id="GFh-Mi-rNm"/>
                         <outlet property="dateStartPicker" destination="6pt-oF-DpB" id="rXr-1w-sAb"/>
-                        <outlet property="numStairsField" destination="wph-9j-xTV" id="jLM-ZM-maU"/>
-                        <outlet property="numStepsField" destination="hWb-hj-RQx" id="ZM0-aj-Xr8"/>
+                        <outlet property="numStairsLabel" destination="BBO-ah-Yl6" id="eZ4-Ka-gR1"/>
+                        <outlet property="numStepsLabel" destination="4tX-ON-Tqp" id="m2I-Tl-451"/>
                         <outlet property="saveButton" destination="bwb-fe-Z5L" id="3YV-fB-xs4"/>
                         <outlet property="scrollView" destination="6tK-ci-zzd" id="jT1-v3-T0d"/>
+                        <outlet property="stairsStepper" destination="Ycv-aM-N5k" id="Q84-tv-K6Z"/>
+                        <outlet property="stepsStepper" destination="aw0-xZ-8yN" id="1dA-8E-wZw"/>
                         <outlet property="textField" destination="alI-u3-sVO" id="RQc-ep-U8k"/>
                         <outlet property="typeSelecter" destination="BkF-wO-6bf" id="6wT-Za-YRe"/>
                     </connections>
@@ -400,18 +418,6 @@
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Edit Number of Steps" minimumFontSize="17" id="ic6-iL-7Qs">
-                                        <rect key="frame" x="16" y="197" width="288" height="30"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
-                                    </textField>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Edit Number of Stairs" minimumFontSize="17" id="btm-t8-0GS">
-                                        <rect key="frame" x="16" y="264" width="288" height="30"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
-                                    </textField>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="TtF-pe-mgq">
                                         <rect key="frame" x="16" y="125" width="288" height="29"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -476,6 +482,34 @@
                                             <!--2015-02-01 12:00:00 +0000-->
                                         </date>
                                     </datePicker>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="rYa-gB-KIj">
+                                        <rect key="frame" x="16" y="197" width="186" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="vzc-ic-NWS">
+                                        <rect key="frame" x="16" y="264" width="186" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="10000" stepValue="10" id="tLc-Rw-yAR">
+                                        <rect key="frame" x="210" y="193" width="94" height="29"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <connections>
+                                            <action selector="stepsStepperAction:" destination="4uL-hu-mZb" eventType="valueChanged" id="4Pb-pK-Qcy"/>
+                                        </connections>
+                                    </stepper>
+                                    <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="10000" stepValue="10" id="3AI-XJ-QUP">
+                                        <rect key="frame" x="210" y="260" width="94" height="29"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <connections>
+                                            <action selector="stairsStepperAction:" destination="4uL-hu-mZb" eventType="valueChanged" id="gHd-cA-KI3"/>
+                                        </connections>
+                                    </stepper>
                                 </subviews>
                             </scrollView>
                         </subviews>
@@ -497,13 +531,15 @@
                     <size key="freeformSize" width="320" height="800"/>
                     <connections>
                         <outlet property="editDateField" destination="RL6-vV-1fd" id="O12-qO-bd5"/>
-                        <outlet property="editStairsField" destination="btm-t8-0GS" id="KHs-F9-QET"/>
                         <outlet property="editStartDateField" destination="zRn-Mk-jVK" id="NB1-aF-nad"/>
-                        <outlet property="editStepsField" destination="ic6-iL-7Qs" id="seh-FB-Kvv"/>
                         <outlet property="editTitleField" destination="Svt-X3-KD7" id="OGo-IF-UJw"/>
                         <outlet property="editTypeField" destination="TtF-pe-mgq" id="Jgz-WP-gyv"/>
+                        <outlet property="numStairsLabel" destination="vzc-ic-NWS" id="moG-Wu-CQ9"/>
+                        <outlet property="numStepsLabel" destination="rYa-gB-KIj" id="V3u-6d-FNZ"/>
                         <outlet property="saveButton" destination="jOc-um-6UR" id="Mnf-LD-Da6"/>
                         <outlet property="scrollView" destination="lWh-sL-qts" id="O49-Tm-vYd"/>
+                        <outlet property="stairsStepper" destination="3AI-XJ-QUP" id="r7v-Cm-Fd2"/>
+                        <outlet property="stepsStepper" destination="tLc-Rw-yAR" id="VPb-Ve-8ne"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CGO-wx-c3O" userLabel="First Responder" sceneMemberID="firstResponder"/>
